--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <section id="head">
+            <section class="logo">
+                Header Logo
+            </section>
+            <nav>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
+        </section>
+        <section id="hero">
+            <section class="title-area">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button type="button">Sign up</button>
+            </section>
+            <section class="image-area">
+                <div>
+                    this is a placeholder for an image
+                </div>
+            </section>
+        </section>
+    </header>
+    <main>
+
+
+    </main>
+    <footer>
+
+
+    </footer>
 </body>
 </html>
