Header Section work complete

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Portfolio</title>
 </head>
@@ -12,7 +15,7 @@
             <section class="logo">
                 Header Logo
             </section>
-            <nav>
+            <nav id="primary_menu">
                 <ul>
                     <li><a href="#">header link one</a></li>
                     <li><a href="#">header link two</a></li>
@@ -24,7 +27,7 @@
             <section class="title-area">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button type="button">Sign up</button>
+                <a class="button" href="#">Sign up</a>
             </section>
             <section class="image-area">
                 <div>
