Full Section added

--- a/index.html
+++ b/index.html
@@ -37,12 +37,55 @@
         </section>
     </header>
     <main>
-
+        <section id="info">
+            <h2>Some random information.</h2>
+            <section>
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+            </section>
+        </section>
+        <section id="quote">
+            <blockquote>
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                <cite>- Thor, God of Thunder</cite>
+            </blockquote>
+        </section>
+        <section id="call-to-action">
+            <div class="area">
+                <div>
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <a href="#">Sign up</a>
+            </div>
+        </section>
 
     </main>
     <footer>
 
-
+        Copyright © The Odin Project 2024
     </footer>
 </body>
 </html>
